# represent

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  SECURITY.md
.claude/skills/represent-design/: SKILL.md
.githooks/: pre-commit
.github/workflows/: ci.yaml  cve-scan.yaml  dockerimage.yaml
backend/: .env.example  Cargo.toml  bacon.toml
backend/src/: auth.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  routes.rs  state.rs  store.rs
e2e/: Cargo.toml
e2e/src/: lib.rs
e2e/tests/: api.rs
frontend/: .gitignore  .prettierignore  eslint.config.js  package.json  svelte.config.js  vite.config.ts
frontend/scripts/: gen-icons.sh
frontend/src/: app.html  service-worker.ts
frontend/src/lib/: api.ts  markdown.ts  offline.svelte.ts
frontend/src/lib/components/: MarkdownView.svelte  Mermaid.svelte  OfflineBadge.svelte  Panel.svelte  SelectionToolbar.svelte  TimerBar.svelte  Wordmark.svelte
frontend/src/lib/styles/: halo.css
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/p/[project]/: +page.svelte
frontend/src/routes/p/[project]/f/[file]/: +page.svelte
frontend/static/: manifest.webmanifest
