[package]
name = "represent-backend"
version.workspace = true
edition.workspace = true

[[bin]]
name = "represent-backend"
path = "src/main.rs"

[lib]
name = "represent_backend"
path = "src/lib.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
mime_guess = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
dotenvy = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
